app-v1.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp-v1
  namespace: canary-demo
spec:
  replicas: 4
  selector:
    matchLabels:
      app: myapp
      version: v1
  template:
    metadata:
      labels:
        app: myapp
        version: v1
    spec:
      containers:
        - name: myapp
          image: hashicorp/http-echo:1.0
          args:
            - "-text=hello from version 1"
          ports:
            - containerPort: 5678
