app-v2.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp-v2
  namespace: canary-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: myapp
      version: v2
  template:
    metadata:
      labels:
        app: myapp
        version: v2
    spec:
      containers:
        - name: myapp
          image: hashicorp/http-echo:1.0
          args:
            - "-text=hello from version 2"
          ports:
            - containerPort: 5678
