service.yml
apiVersion: v1
kind: Service
metadata:
  name: myapp-service
  namespace: canary-demo
spec:
  selector:
    app: myapp
  ports:
    - name: http
      port: 80
      targetPort: 5678
