destination-rule.yml
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: myapp-destination
  namespace: canary-demo
spec:
  host: myapp-service
  
  subsets:
    - name: v1
      labels:
        version: v1
    - name: v2
      labels:
        version: v2
